Complete CarStore updates